refactor: BlackList 조회 코드 명확하게 수정